name:                dailyprogrammer-bot
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/jcbelanger/dailyprogrammer-bot#readme
license:             BSD3
license-file:        LICENSE
author:              Joshua Belanger
maintainer:          jcbelanger@users.noreply.github.com
copyright:           2016
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , DailyProgrammer.Offline
                     , DailyProgrammer.WikiChallenges
                     , DailyProgrammer.Posts
                     , Reddit.Pandoc
                     , Reddit.Pandoc.RedditMarkdown
                     , Reddit.Pandoc.Post
                     , Reddit.Pandoc.User
                     , Reddit.Pandoc.Subreddit
                     , Reddit.Pipes
                     , Reddit.Pipes.Listing
                     , Reddit.Pipes.Post
  build-depends:       base >= 4.7 && < 5
                     , reddit >= 0.2
                     , text >= 1.2
                     , containers >= 0.5
                     , transformers >= 0.4
                     , pipes >= 4.1
                     , pipes-group >= 1.0
                     , free >= 4.12
                     , data-default-class >= 0.0.1
                     , pandoc >= 1.1
                     , pandoc-types >= 1.16
                     , time >= 1.5
                     , bytestring >= 0.10
                     , lens-family-core >= 1.2
  default-language:    Haskell2010

executable dailyprogrammer-bot-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dailyprogrammer-bot
  default-language:    Haskell2010

test-suite dailyprogrammer-bot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dailyprogrammer-bot
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jcbelanger/dailyprogrammer-bot
